IDVA6-1238 Fixes to issues highlighted in code review